Add a plugin loader, a scheduler plugin for the built-in scheduler and scheduler selection to the schedule editor.
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@967300 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kplato/CMakeLists.txt
+++ b/kplato/CMakeLists.txt
@@ -54,6 +54,9 @@ set(kplatoprivate_LIB_SRCS
     kptpart.cpp
     kptview.cpp
     KPtViewAdaptor.cpp
+
+    kptschedulerpluginloader.cpp
+    kptbuiltinschedulerplugin.cpp
 )
 
 kde4_add_ui_files(kplatoprivate_LIB_SRCS
