--- a/krita/plugins/tools/defaulttools/CMakeLists.txt
+++ b/krita/plugins/tools/defaulttools/CMakeLists.txt
@@ -16,7 +16,10 @@ kde4_add_ui_files(kritadefaulttools_PART_SRCS wdgcolorpicker.ui)
 
 kde4_add_plugin(kritadefaulttools ${kritadefaulttools_PART_SRCS})
 
-target_link_libraries(kritadefaulttools kritaui ${QT_QTOPENGL_LIBRARY} ${OPENGL_LIBRARIES} )
+target_link_libraries(kritadefaulttools kritaui)
+if (HAVE_OPENGL)
+  target_link_libraries(kritadefaulttools ${QT_QTOPENGL_LIBRARY} ${OPENGL_LIBRARIES} )
+endif (HAVE_OPENGL)
 
 install(TARGETS kritadefaulttools  DESTINATION ${PLUGIN_INSTALL_DIR})
 
