Conditional compile of rcps plugin. Add class to access librcps. CCMAIL:robertle@semistable.com
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@967928 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kplato/plugins/schedulers/rcps/CMakeLists.txt
+++ b/kplato/plugins/schedulers/rcps/CMakeLists.txt
@@ -1,8 +1,9 @@
 
-include_directories( ${KOSTORE_INCLUDES} ${CMAKE_SOURCE_DIR}/kplato/libs/kernel ${KDE4_INCLUDES} )
+include_directories( ${LIBRCPS_INCLUDE_DIR} ${KOSTORE_INCLUDES} ${CMAKE_SOURCE_DIR}/kplato/libs/kernel ${KDE4_INCLUDES} )
 
 SET ( RCPSScheduler_SRCS
     KPlatoRCPSPlugin.cpp
+    KPlatoRCPSScheduler.cpp
 )
 
 kde4_add_plugin( kplatorcpsscheduler ${RCPSScheduler_SRCS} )
@@ -11,6 +12,7 @@ target_link_libraries(
     kplatorcpsscheduler
     kplatokernel
     kostore
+    ${LIBRCPS_LIBRARIES}
     ${KDE4_KDECORE_LIBS}
     ${QT_QTCORE_LIBRARY}
     )
