--- a/libs/kotext/texteditingplugin.desktop
+++ b/libs/kotext/texteditingplugin.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=Text Editing plugin for the KOffice text tool
+Name[es]=Complemento de edición de texto para la herramienta de texto de KOffice
 Name[et]=KOffice'i tekstitööriista teksti redigeerimise plugin
 Name[it]=Estensione di modifica di testo per lo strumento di testo di KOffice
 Name[pt]='Plugin' de edição de texto para a ferramenta de texto do KOffice
