--- a/krita/plugins/colorspaces/ctlcs/krita_ctlcs_plugin.desktop
+++ b/krita/plugins/colorspaces/ctlcs/krita_ctlcs_plugin.desktop
@@ -2,6 +2,7 @@
 Name=CTL Color Spaces
 Name[da]=CTL-farverum
 Name[en_GB]=CTL Colour Spaces
+Name[es]=Espacios de color CTL
 Name[et]=CTL värviruumid
 Name[it]=Spazi di colore CTL
 Name[pt]=Espaços de Cores CTL
@@ -12,6 +13,7 @@ Name[x-test]=xxCTL Color Spacesxx
 Name[zh_TW]=CTL 色彩空間
 Comment=Color model written using the Color Transformation Language.
 Comment[en_GB]=Colour model written using the Colour Transformation Language.
+Comment[es]=Modelo de color escrito usado el Lenguaje de Transformación de Colores.
 Comment[et]=CTL-is (Color Transformation Language) kirja pandud värvimudel
 Comment[it]=Modello di colore scritto nel linguaggio di trasformazione dei colori, o «Color Transformation Language».
 Comment[pt]=Modelo de cores criado com a Linguagem de Transformações de Cores (CTL).
