--- a/krita/plugins/tools/tool_dyna/kritatooldyna.desktop
+++ b/krita/plugins/tools/tool_dyna/kritatooldyna.desktop
@@ -3,6 +3,7 @@ Name=Dyna Tool
 Name[ca]=Eina dinàmica
 Name[da]=Dyna-værktøj
 Name[de]=Dyna-Werkzeug
+Name[es]=Herramienta Dyna
 Name[et]=Dyna tööriist
 Name[ga]=Uirlis Dyna
 Name[it]=Strumento dinamico
