implemented snapping all points of selected path to grid
BUG:137767



git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@968508 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/karbon/data/karbon.rc
+++ b/karbon/data/karbon.rc
@@ -118,6 +118,7 @@
             <Action name="subtract_path"/>
             <Action name="unite_path"/>
             <Separator/>
+            <Action name="path_snap_to_grid"/>
         </Menu>
         <Menu name="effects">
             <text>Effe&amp;cts</text>
