o merge changes from koffice-isi branch to trunk.   This merges the feature to insert a existing document into the document   you are just working on.
  Thanks to the students who worked on the koffice-isi branch for
  their hard work.



git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@968548 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kpresenter/part/kpresenter.rc
+++ b/kpresenter/part/kpresenter.rc
@@ -45,6 +45,7 @@
         </Menu>
         <Menu name="insert"><text>&amp;Insert</text>
             <Action name="insert_variable"/> <!-- menu -->
+	        <Action name="import_document" />
         </Menu>
         <Menu name="format"><text>F&amp;ormat</text>
             <Action name="format_masterpage"/> 
