SVN_SILENT made messages (.desktop file)
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@968816 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kpresenter/templates/Screenpresentations/savannah.desktop
+++ b/kpresenter/templates/Screenpresentations/savannah.desktop
@@ -3,7 +3,7 @@ Icon=template_savannah
 Name=Savannah
 Name[de]=Savanne
 Name[el]=Σαβάνα
-Name[es]=Savana
+Name[es]=Sabana
 Name[fi]=Savanni
 Name[fr]=Savane
 Name[fy]=Savanne
@@ -38,7 +38,7 @@ Comment[da]=Savanna af dannya
 Comment[de]=Savanne von dannya
 Comment[el]=Σαβάνα από dannya
 Comment[eo]=Savannah far dannya
-Comment[es]=Savana por dannya
+Comment[es]=Sabana por dannya
 Comment[et]='dannya' loodud Savannah
 Comment[fi]=Savanni. tehnyt dannya
 Comment[fr]=Savane par Dannya
