--- a/kplato/libs/kernel/kplato_schedulerplugin.desktop
+++ b/kplato/libs/kernel/kplato_schedulerplugin.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=KPlato Scheduler Plugin
+Name[es]=Complemento de planificación de KPlato
 Name[pt]='Plugin' de Calendarização do KPlato
 Name[pt_BR]='Plugin' de Calendarização do KPlato
 Name[sv]=Kplato insticksprogram för schemaläggning
@@ -7,6 +8,7 @@ Name[uk]=Додаток планування KPlato
 Type=ServiceType
 X-KDE-ServiceType=KPlato/SchedulerPlugin
 Comment=A plugin that calculates a project schedule
+Comment[es]=Un complemento que calcula la planificación de un proyecto
 Comment[pt]=Um 'plugin' que calcula o escalonamento de um projecto
 Comment[pt_BR]=Um 'plugin' que calcula o escalonamento de um projecto
 Comment[sv]=Ett insticksprogram som beräknar ett projektschema
