--- a/kplato/plugins/schedulers/rcps/kplatorcpsscheduler.desktop
+++ b/kplato/plugins/schedulers/rcps/kplatorcpsscheduler.desktop
@@ -4,11 +4,13 @@ Type=Service
 X-KDE-Library=kplatorcpsscheduler
 
 Name=RCPS Scheduler
+Name[es]=Planificador RCPS
 Name[pt]=Calendarização RCPS
 Name[pt_BR]=Calendarização RCPS
 Name[sv]=RCPS-schemaläggning
 Name[uk]=Засіб планування RCPS
 Comment=Genetics based Resource Conflict Project Scheduler
+Comment[es]=Planificador de proyectos con conflicto de recursos basado en algoritmos genéticos
 Comment[pt]=Calendarização de Projectos com Conflitos de Recursos baseada em algoritmos genéticos
 Comment[pt_BR]=Calendarização de Projectos com Conflitos de Recursos baseada em algoritmos genéticos
 Comment[sv]=Genetiskt baserad resurskonfliktschemaläggning av projekt
