SVN_SILENT made messages (.desktop file)
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@969145 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/extensions/shiva/kritashiva.desktop
+++ b/krita/plugins/extensions/shiva/kritashiva.desktop
@@ -3,6 +3,7 @@ Name=Shiva Kernel Language Support
 Name[es]=Implementación del lenguaje del núcleo Shiva
 Name[et]=Shiva kernelikeele toetus
 Name[it]=Supporto per il linguaggio Shiva Kernel
+Name[nl]=Ondersteuning van Shiva-kerneltaal
 Name[pt]=Suporte à Linguagem do 'Kernel' Shiva
 Name[pt_BR]=Suporte à Linguagem do 'Kernel' Shiva
 Name[sv]=Shiva språkstöd
@@ -13,6 +14,7 @@ Comment=Shiva Kernel Language Support
 Comment[es]=Implementación del lenguaje del núcleo Shiva
 Comment[et]=Shiva kernelikeele toetus
 Comment[it]=Supporto per il linguaggio Shiva Kernel
+Comment[nl]=Ondersteuning van Shiva-kerneltaal
 Comment[pt]=Suporte à Linguagem do 'Kernel' Shiva
 Comment[pt_BR]=Suporte à Linguagem do 'Kernel' Shiva
 Comment[sv]=Shiva språkstöd
