--- a/krita/plugins/tools/tool_dyna/kritatooldyna.desktop
+++ b/krita/plugins/tools/tool_dyna/kritatooldyna.desktop
@@ -8,6 +8,7 @@ Name[et]=Dyna tööriist
 Name[ga]=Uirlis Dyna
 Name[it]=Strumento dinamico
 Name[nds]=Dünaamsch Warktüüch
+Name[nl]=Dyna-gereedschap
 Name[pt]=Ferramenta Dinâmica
 Name[pt_BR]=Ferramenta Dinâmica
 Name[sv]=Dynaverktyg
