--- a/kplato/libs/kernel/kplato_schedulerplugin.desktop
+++ b/kplato/libs/kernel/kplato_schedulerplugin.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=KPlato Scheduler Plugin
 Name[es]=Complemento de planificación de KPlato
+Name[nl]=KPlato planner-plugin
 Name[pt]='Plugin' de Calendarização do KPlato
 Name[pt_BR]='Plugin' de Calendarização do KPlato
 Name[sv]=Kplato insticksprogram för schemaläggning
@@ -9,6 +10,7 @@ Type=ServiceType
 X-KDE-ServiceType=KPlato/SchedulerPlugin
 Comment=A plugin that calculates a project schedule
 Comment[es]=Un complemento que calcula la planificación de un proyecto
+Comment[nl]=Een plugin, die een projectplanning berekent
 Comment[pt]=Um 'plugin' que calcula o escalonamento de um projecto
 Comment[pt_BR]=Um 'plugin' que calcula o escalonamento de um projecto
 Comment[sv]=Ett insticksprogram som beräknar ett projektschema
