--- a/krita/plugins/colorspaces/ctlcs/krita_ctlcs_plugin.desktop
+++ b/krita/plugins/colorspaces/ctlcs/krita_ctlcs_plugin.desktop
@@ -5,6 +5,7 @@ Name[en_GB]=CTL Colour Spaces
 Name[es]=Espacios de color CTL
 Name[et]=CTL värviruumid
 Name[it]=Spazi di colore CTL
+Name[nl]=CTL-kleurruimten
 Name[pt]=Espaços de Cores CTL
 Name[pt_BR]=Espaços de Cores CTL
 Name[sv]=CTL-färgrymder
@@ -16,6 +17,7 @@ Comment[en_GB]=Colour model written using the Colour Transformation Language.
 Comment[es]=Modelo de color escrito usado el Lenguaje de Transformación de Colores.
 Comment[et]=CTL-is (Color Transformation Language) kirja pandud värvimudel
 Comment[it]=Modello di colore scritto nel linguaggio di trasformazione dei colori, o «Color Transformation Language».
+Comment[nl]=Kleurmodel geschreven met gebruik van de kleurtransformatietaal
 Comment[pt]=Modelo de cores criado com a Linguagem de Transformações de Cores (CTL).
 Comment[pt_BR]=Modelo de cores criado com a Linguagem de Transformações de Cores (CTL).
 Comment[sv]=Färgmodell skriven med färgtransformeringsspråket CTL.
