--- a/libs/kotext/texteditingplugin.desktop
+++ b/libs/kotext/texteditingplugin.desktop
@@ -3,6 +3,7 @@ Name=Text Editing plugin for the KOffice text tool
 Name[es]=Complemento de edición de texto para la herramienta de texto de KOffice
 Name[et]=KOffice'i tekstitööriista teksti redigeerimise plugin
 Name[it]=Estensione di modifica di testo per lo strumento di testo di KOffice
+Name[nl]=Tekstinvoerplugin voor het tekstgereedschap van KOffice
 Name[pt]='Plugin' de edição de texto para a ferramenta de texto do KOffice
 Name[pt_BR]=Plug-in de edição de texto para a ferramenta de texto do KOffice
 Name[sv]=Insticksprogram med textredigering för Koffice textverktyg
