SVN_SILENT made messages (.desktop file)
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@969593 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kplato/libs/kernel/kplato_schedulerplugin.desktop
+++ b/kplato/libs/kernel/kplato_schedulerplugin.desktop
@@ -3,7 +3,7 @@ Name=KPlato Scheduler Plugin
 Name[es]=Complemento de planificación de KPlato
 Name[nl]=KPlato planner-plugin
 Name[pt]='Plugin' de Calendarização do KPlato
-Name[pt_BR]='Plugin' de Calendarização do KPlato
+Name[pt_BR]=Plugin de Calendário do KPlato
 Name[sv]=Kplato insticksprogram för schemaläggning
 Name[uk]=Додаток планування KPlato
 Type=ServiceType
@@ -12,6 +12,6 @@ Comment=A plugin that calculates a project schedule
 Comment[es]=Un complemento que calcula la planificación de un proyecto
 Comment[nl]=Een plugin, die een projectplanning berekent
 Comment[pt]=Um 'plugin' que calcula o escalonamento de um projecto
-Comment[pt_BR]=Um 'plugin' que calcula o escalonamento de um projecto
+Comment[pt_BR]=Um plugin que calcula o agendamento de um projeto
 Comment[sv]=Ett insticksprogram som beräknar ett projektschema
 Comment[uk]=Додаток для обчислення розкладу проекту
