--- a/kplato/plugins/schedulers/rcps/kplatorcpsscheduler.desktop
+++ b/kplato/plugins/schedulers/rcps/kplatorcpsscheduler.desktop
@@ -14,6 +14,6 @@ Comment=Genetics based Resource Conflict Project Scheduler
 Comment[es]=Planificador de proyectos con conflicto de recursos basado en algoritmos genéticos
 Comment[nl]=Op genetica gebaseerde projectplanner voor hulpbronconflicten
 Comment[pt]=Calendarização de Projectos com Conflitos de Recursos baseada em algoritmos genéticos
-Comment[pt_BR]=Calendarização de Projectos com Conflitos de Recursos baseada em algoritmos genéticos
+Comment[pt_BR]=Calendarização de Projetos com Conflitos de Recursos baseada em algoritmos genéticos
 Comment[sv]=Genetiskt baserad resurskonfliktschemaläggning av projekt
 Comment[uk]=Генетичний планувальник конфліктів виконавців проекту
