--- a/kplato/libs/kernel/kplato_schedulerplugin.desktop
+++ b/kplato/libs/kernel/kplato_schedulerplugin.desktop
@@ -1,17 +1,21 @@
 [Desktop Entry]
 Name=KPlato Scheduler Plugin
 Name[es]=Complemento de planificación de KPlato
+Name[et]=KPlato ajakavaplugin
 Name[nl]=KPlato planner-plugin
 Name[pt]='Plugin' de Calendarização do KPlato
 Name[pt_BR]=Plugin de Calendário do KPlato
 Name[sv]=Kplato insticksprogram för schemaläggning
 Name[uk]=Додаток планування KPlato
+Name[zh_TW]=KPlato 排程器外掛程式
 Type=ServiceType
 X-KDE-ServiceType=KPlato/SchedulerPlugin
 Comment=A plugin that calculates a project schedule
 Comment[es]=Un complemento que calcula la planificación de un proyecto
+Comment[et]=Projekti ajakava arvutav plugin
 Comment[nl]=Een plugin, die een projectplanning berekent
 Comment[pt]=Um 'plugin' que calcula o escalonamento de um projecto
 Comment[pt_BR]=Um plugin que calcula o agendamento de um projeto
 Comment[sv]=Ett insticksprogram som beräknar ett projektschema
 Comment[uk]=Додаток для обчислення розкладу проекту
+Comment[zh_TW]=計算專案排程的外掛程式
