--- a/kplato/plugins/schedulers/rcps/kplatorcpsscheduler.desktop
+++ b/kplato/plugins/schedulers/rcps/kplatorcpsscheduler.desktop
@@ -5,15 +5,19 @@ X-KDE-Library=kplatorcpsscheduler
 
 Name=RCPS Scheduler
 Name[es]=Planificador RCPS
+Name[et]=RCPS ajakava
 Name[nl]=RCPS-planner
 Name[pt]=Calendarização RCPS
 Name[pt_BR]=Calendarização RCPS
 Name[sv]=RCPS-schemaläggning
 Name[uk]=Засіб планування RCPS
+Name[zh_TW]=RCPS 排程器
 Comment=Genetics based Resource Conflict Project Scheduler
 Comment[es]=Planificador de proyectos con conflicto de recursos basado en algoritmos genéticos
+Comment[et]=Ressursipiirangutega projektide ajakava
 Comment[nl]=Op genetica gebaseerde projectplanner voor hulpbronconflicten
 Comment[pt]=Calendarização de Projectos com Conflitos de Recursos baseada em algoritmos genéticos
 Comment[pt_BR]=Calendarização de Projetos com Conflitos de Recursos baseada em algoritmos genéticos
 Comment[sv]=Genetiskt baserad resurskonfliktschemaläggning av projekt
 Comment[uk]=Генетичний планувальник конфліктів виконавців проекту
+Comment[zh_TW]=基於 Genetics 的資源衝突專案排程器
