add a binary file from svn for the image background feature I'd like to play with today
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@970877 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/data/CMakeLists.txt
+++ b/krita/data/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory( palettes )
 add_subdirectory( templates )
 add_subdirectory( shaders )
 add_subdirectory( images )
+add_subdirectory( backgrounds )
 ########### install files ###############
 
 install( FILES  
