Something fucked up git-svn
I think these are the last changes that ought to be committed.

git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@971294 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/image/CMakeLists.txt
+++ b/krita/image/CMakeLists.txt
@@ -88,6 +88,7 @@ set(kritaimage_LIB_SRCS
    generator/kis_generator_layer.cpp
    generator/kis_generator_registry.cpp
    kis_adjustment_layer.cc
+   kis_background.cpp
    kis_base_node.cpp
    kis_base_processor.cpp
    kis_basic_math_toolbox.cpp
