SVN_SILENT made messages (.desktop file)
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@971467 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kivio/src/part/kivio.desktop
+++ b/kivio/src/part/kivio.desktop
@@ -42,7 +42,7 @@ GenericName[ne]=फ्लो चित्रपट र चित्र सम्
 GenericName[nl]=Bewerken van (stroom)diagrammen
 GenericName[pl]=Edycja diagramów oraz schematów przepływów
 GenericName[pt]=Fluxogramas e Edição de Diagramas
-GenericName[pt_BR]=Edição de Fluxogramas & Diagramas
+GenericName[pt_BR]=Edição de Fluxogramas e Diagramas
 GenericName[ru]=Схемы
 GenericName[sk]= Vývojové diagramy
 GenericName[sl]=Urejanje grafov in diagramov poteka
