FEATURE: Adds the ability to change the canvas size in Krita GUI: Added 'Size Canvas' item under the Image menu in Krita
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@971745 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/extensions/imagesize/CMakeLists.txt
+++ b/krita/plugins/extensions/imagesize/CMakeLists.txt
@@ -1,13 +1,16 @@
-
+add_subdirectory( pics )
 
 set(kritaimagesize_PART_SRCS
     imagesize.cc
     dlg_imagesize.cc
+    dlg_canvassize.cc
     dlg_layersize.cc
+    kcanvaspreview.cc
     )
 
 kde4_add_ui_files(kritaimagesize_PART_SRCS
     wdg_imagescale.ui
+    wdg_canvassize.ui
     wdg_layersize.ui
     )
 
