install Copy and Cut controller
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@971969 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/libs/guiutils/CMakeLists.txt
+++ b/libs/guiutils/CMakeLists.txt
@@ -96,6 +96,8 @@ install(
     koguiutils_export.h
     KoCharSelectDia.h
     KoContextHelp.h
+    KoCutController.h
+    KoCopyController.h
     KoDocumentSectionModel.h
     KoDocumentSectionView.h
     KoGeneralPropertyUi.h
