--- a/krita/ui/CMakeLists.txt
+++ b/krita/ui/CMakeLists.txt
@@ -44,6 +44,7 @@ set(kritaui_LIB_SRCS
     kis_bookmarked_configurations_model.cc
     kis_bookmarked_filter_configurations_model.cc
     kis_canvas_resource_provider.cpp 
+    kis_categorized_item_delegate.cpp
     kis_clipboard.cc 
     kis_config.cc
     kis_config_notifier.cpp 
