SVN_SILENT made messages (.desktop file)
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@972277 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/extensions/backgrounds/kritabackgrounds.desktop
+++ b/krita/plugins/extensions/backgrounds/kritabackgrounds.desktop
@@ -1,5 +1,8 @@
 [Desktop Entry]
 Name=Image Background Pattern Selector
+Name[pt]=Selector de Padrões de Fundo da Imagem
+Name[pt_BR]=Selector de Padrões de Fundo da Imagem
+Name[uk]=Інструмент вибору зображення візерунка тла
 X-KDE-ServiceTypes=Krita/ViewPlugin
 Type=Service
 X-KDE-Library=kritabackgrounds
