Use a qslider for editing task progress, and show it as a progressbar. Issue: QSlider has a fixed hight of 23 pixels, whatever geometry is set, but it still better than the totally useless spinbox.
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@972500 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kplato/libs/models/CMakeLists.txt
+++ b/kplato/libs/models/CMakeLists.txt
@@ -31,6 +31,8 @@ set(kplatomodels_LIB_SRCS
     kptaccountsmodel.cpp
     kptpertcpmmodel.cpp
     kptresourceappointmentsmodel.cpp
+
+    kpttaskcompletedelegate.cpp
 )
 
 kde4_add_library(kplatomodels SHARED ${kplatomodels_LIB_SRCS})
