--- a/krita/plugins/extensions/backgrounds/kritabackgrounds.desktop
+++ b/krita/plugins/extensions/backgrounds/kritabackgrounds.desktop
@@ -2,7 +2,9 @@
 Name=Image Background Pattern Selector
 Name[pt]=Selector de Padrões de Fundo da Imagem
 Name[pt_BR]=Selector de Padrões de Fundo da Imagem
+Name[sv]=Väljare av bakgrundsmönster för bilder
 Name[uk]=Інструмент вибору зображення візерунка тла
+Name[zh_TW]=背景圖片樣式選擇器
 X-KDE-ServiceTypes=Krita/ViewPlugin
 Type=Service
 X-KDE-Library=kritabackgrounds
