Add a task notes editor to avoid using the full task settings dialog just for notes.
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@973003 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kplato/kplato.rc
+++ b/kplato/kplato.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" >
-<kpartgui name="KPlato" version="15">
+<kpartgui name="KPlato" version="16">
     <MenuBar>
         <Menu name="file"><text>&amp;File</text>
             <Separator/>
@@ -96,10 +96,12 @@
         <Action name="node_properties"/>
     </Menu>
     <Menu name="taskstatus_popup">
+        <Action name="task_notes"/>
         <Action name="task_progress"/>
         <!--<Action name="task_workpackagecontrol"/>-->
     </Menu>
     <Menu name="taskview_popup">
+        <Action name="task_notes"/>
         <Action name="task_progress"/>
         <!--<Action name="task_workpackagecontrol"/>-->
     </Menu>
@@ -108,12 +110,19 @@
         <Action name="task_progress"/>
     </Menu>
     <Menu name="taskview_milestone_popup">
+        <Action name="task_notes"/>
         <Action name="task_progress"/>
     </Menu>
+    <Menu name="taskview_summary_popup">
+        <Action name="task_notes"/>
+        <!--<Action name="task_workpackagecontrol"/>-->
+    </Menu>
     <Menu name="resourceappointment_popup">
+        <Action name="task_notes"/>
         <Action name="task_progress"/>
     </Menu>
     <Menu name="resourceassigment_popup">
+        <Action name="task_notes"/>
         <Action name="task_progress"/>
     </Menu>
     <Menu name="resourceeditor_resource_popup">
