--- a/kplato/libs/ui/CMakeLists.txt
+++ b/kplato/libs/ui/CMakeLists.txt
@@ -65,6 +65,7 @@ set(kplatoui_LIB_SRCS
     kpttaskgeneralpanel.cpp
     kpttaskprogresspanel.cpp
     kpttaskprogressdialog.cpp
+    kpttasknotesdialog.cpp
     kptwbsdefinitiondialog.cpp
     kptwbsdefinitionpanel.cpp
     kptresourceassignmentview.cpp
