--- a/krita/plugins/extensions/backgrounds/kritabackgrounds.desktop
+++ b/krita/plugins/extensions/backgrounds/kritabackgrounds.desktop
@@ -1,5 +1,6 @@
 [Desktop Entry]
 Name=Image Background Pattern Selector
+Name[et]=Pildi taustamustri valija
 Name[pt]=Selector de Padrões de Fundo da Imagem
 Name[pt_BR]=Selector de Padrões de Fundo da Imagem
 Name[sv]=Väljare av bakgrundsmönster för bilder
