SVN_SILENT made messages (.desktop file)
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@974105 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/templates/SpreadSheet.desktop
+++ b/templates/SpreadSheet.desktop
@@ -5,7 +5,7 @@ Name[br]=Teul al loger ...
 Name[ca]=Document de full de càlcul...
 Name[cs]=Tabulka
 Name[cy]=Dogfen Daenlen...
-Name[da]=Regnearkdokument...
+Name[da]=Regnearksdokument...
 Name[de]=Tabellenkalkulations-Dokument ...
 Name[el]=Έγγραφο λογιστικού φύλλου...
 Name[eo]=Tabelkalkulilo-dokumento...
