Add a "fixed size" paint device
For things like dabs, we always know the extent of the paint device,
and they don't grow either. Create a fixed size paint device that
simply knows its bounds, its pixelsize and has an array of bytes
representing the pixels. This will be used in an optimized version
of KisPainter and in the brush engines.

git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@974278 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/image/CMakeLists.txt
+++ b/krita/image/CMakeLists.txt
@@ -49,6 +49,7 @@ include_directories( ${KDE4_INCLUDE_DIR}/threadweaver/
 
 set(kritaimage_LIB_SRCS
    ${libkritatile_SRCS}
+   kis_painter.cc
    brushengine/kis_paint_information.cc
    brushengine/kis_paintop.cc
    brushengine/kis_paintop_factory.cpp
@@ -118,8 +119,8 @@ set(kritaimage_LIB_SRCS
    kis_node_progress_proxy.cpp
    kis_node_visitor.cpp
    kis_paint_device.cc
+   kis_fixed_paint_device.cpp
    kis_paint_layer.cc
-   kis_painter.cc
    kis_painterly_overlay.cpp
    kis_painterly_overlay_colorspace.cpp
    kis_pattern.cc
