do some desultory porting to get the magnetic outline tool back
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@974287 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/tools/tool_curves/CMakeLists.txt
+++ b/krita/plugins/tools/tool_curves/CMakeLists.txt
@@ -1,9 +1,11 @@
+add_definitions(-DQT3_SUPPORT -DQT3_SUPPORT_WARNINGS)
 
 
 set(kritatoolcurves_PART_SRCS
 #    tool_curves.cc
     kis_curve_framework.cc
-#    kis_tool_curve.cc
+    kis_curve_magnetic.cpp
+    kis_tool_curve.cc
 #    kis_tool_bezier.cc
 #    kis_tool_bezier_paint.cc
 #    kis_tool_bezier_select.cc
@@ -15,7 +17,9 @@ set(kritatoolcurves_PART_SRCS
 kde4_add_plugin(kritatoolcurves ${kritatoolcurves_PART_SRCS})
 
 
-target_link_libraries(kritatoolcurves kritaui)
+target_link_libraries(kritatoolcurves kritaui 
+    ${KDE4_KDE3SUPPORT_LIBS}
+)
 
 install(TARGETS kritatoolcurves  DESTINATION ${PLUGIN_INSTALL_DIR})
 
