--- a/krita/krita.rc
+++ b/krita/krita.rc
@@ -1,4 +1,4 @@
-<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="Krita" version="16">
+<!DOCTYPE kpartgui SYSTEM "kpartgui.dtd" ><kpartgui name="Krita" version="23">
 
 <MenuBar>
  <Menu name="Edit"><text>&amp;Edit</text>
@@ -65,8 +65,12 @@
 
 <Menu name="Image"><text>&amp;Image</text>
   <Action name="img_properties"/>
-  <Action name="resizeimgtolayer"/>
   <Action name="duplicate_image"/>
+  <Separator/>
+  <DefineGroup name="canvas_resize_merge" append="canvas_resize_merge"/>
+  <Action name="resizeimgtolayer"/>
+  <Separator/>
+  <DefineGroup name="image_transform_merge" append="image_transform_merge"/>
 </Menu>
 
 <Menu name="Layer"><text>&amp;Layer</text>
@@ -76,14 +80,16 @@
   	<Action name="insert_shape_layer"/>
     <Action name="insert_adjustment_layer"/>
     <Action name="insert_generator_layer"/>
+    <Separator/>
+    <Action name="duplicate_layer"/>
   	<Action name="insert_image_as_layer"/>
   	<Action name="cut_selection_to_new_layer"/>
   	<Action name="copy_selection_to_new_layer"/>
 	<Action name="create_layer_from_mask"/>
   </Menu>
   <Action name="remove_layer"/>
-  <Action name="duplicate_layer"/>
   <Action name="hide_layer"/>
+  <Action name="layer_properties"/>
   <Separator/>
   <Action name="raiselayer"/>
   <Action name="lowerlayer"/>
@@ -97,8 +103,8 @@
   <Separator/>
   <Action name="mirrorLayerX"/>
   <Action name="mirrorLayerY"/>
+  <DefineGroup name="layer_transform_merge" append="layer_transform_merge"/>
   <Separator/>
-  <Action name="layer_properties"/>
   <DefineGroup name="layer_properties_merge" />
   <Separator/>
   <Action name="merge_layer"/>
@@ -112,11 +118,13 @@
         <Action name="create_filter_mask"/>
         <Action name="create_transformation_mask"/>
         <Action name="create_selection_mask"/>
-	<Action name="duplicate_mask"/>
+        <Separator/>
+        <Action name="duplicate_mask"/>
     </Menu>
-    <Action name="show_mask"/>
-    <Separator/>
     <Action name="remove_mask"/>
+    <Action name="show_mask"/>
+    <Action name="mask_properties"/>
+    <Separator/>
     <Action name="raise_mask"/>
     <Action name="lower_mask"/>
     <Action name="mask_to_top"/>
@@ -124,8 +132,6 @@
     <Separator/>
     <Action name="mirror_mask_x"/>
     <Action name="mirror_mask_y"/>
-    <Separator/>
-    <Action name="mask_properties"/>
 </Menu>
 
 <Menu name="Select"><text>&amp;Select</text>
