--- a/krita/plugins/extensions/histogram/histogram.rc
+++ b/krita/plugins/extensions/histogram/histogram.rc
@@ -2,9 +2,7 @@
 <kpartgui library="kritahistogram" version="6">
 <MenuBar>
     <Menu name="Layer"><text>&amp;Layer</text>
-	<Separator/>
-	<Action name="histogram"/>
-	<Separator/>
+	<Action name="histogram" group="layer_properties_merge"/>
     </Menu>
 </MenuBar>
 </kpartgui>
