--- a/krita/plugins/extensions/rotateimage/rotateimage.rc
+++ b/krita/plugins/extensions/rotateimage/rotateimage.rc
@@ -1,8 +1,8 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui library="kritarotateimage" version="7">
+<kpartgui library="kritarotateimage" version="8">
 <MenuBar>
     <Menu name="Image"><text>&amp;Image</text>
-        <Menu name="Rotate"><text>&amp;Rotate</text>
+        <Menu name="Rotate" group="image_transform_merge"><text>&amp;Rotate</text>
            <Action name="rotateimage"/>
         <Separator />
            <Action name="rotateImageCW90"/>
@@ -12,7 +12,7 @@
     </Menu>
 
     <Menu name="Layer"><text>La&amp;yer</text>
-        <Menu name="Rotate"><text>&amp;Rotate</text>
+        <Menu name="Rotate" group="layer_transform_merge"><text>&amp;Rotate</text>
         <Action name="rotatelayer"/>
         <Separator />
         <Action name="rotateLayerCW90"/>
