--- a/krita/plugins/extensions/tonemapping/tonemapping.rc
+++ b/krita/plugins/extensions/tonemapping/tonemapping.rc
@@ -2,7 +2,7 @@
 <kpartgui library="kritatonemapping" version="1">
 <MenuBar>
     <Menu name="Layer"><text>&amp;Layer</text>
-		<Action name="tonemapping"/>
+		<Action name="tonemapping"  group="layer_properties_merge"/>
     </Menu>
 </MenuBar>
 </kpartgui>
