SVN_SILENT made messages (.desktop file)
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@974483 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/extensions/backgrounds/kritabackgrounds.desktop
+++ b/krita/plugins/extensions/backgrounds/kritabackgrounds.desktop
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=Image Background Pattern Selector
 Name[et]=Pildi taustamustri valija
+Name[nds]=Bildachtergrund-Musterköör
 Name[pt]=Selector de Padrões de Fundo da Imagem
 Name[pt_BR]=Selector de Padrões de Fundo da Imagem
 Name[sv]=Väljare av bakgrundsmönster för bilder
