--- a/krita/plugins/extensions/rotateimage/kritarotateimage.desktop
+++ b/krita/plugins/extensions/rotateimage/kritarotateimage.desktop
@@ -23,7 +23,7 @@ Name[ja]=画像回転プラグイン
 Name[kk]=Кескінді бұру плагині
 Name[lv]=Attēla pagriešanas spraudnis
 Name[nb]=Programtillegg for bilderotering
-Name[nds]=Moduul för't Bilddreihen
+Name[nds]=Bilddreih-Moduul
 Name[ne]=छवि प्लगइन घुमाउनुहोस्
 Name[nl]=Plugin voor afbeeldingrotatie
 Name[pl]=Wtyczka obrotu obrazków
