--- a/krita/plugins/extensions/shiva/kritashiva.desktop
+++ b/krita/plugins/extensions/shiva/kritashiva.desktop
@@ -3,6 +3,7 @@ Name=Shiva Kernel Language Support
 Name[es]=Implementación del lenguaje del núcleo Shiva
 Name[et]=Shiva kernelikeele toetus
 Name[it]=Supporto per il linguaggio Shiva Kernel
+Name[nds]=Shiva-Karn-Spraakünnerstütten
 Name[nl]=Ondersteuning van Shiva-kerneltaal
 Name[pt]=Suporte à Linguagem do 'Kernel' Shiva
 Name[pt_BR]=Suporte à Linguagem do 'Kernel' Shiva
@@ -14,6 +15,7 @@ Comment=Shiva Kernel Language Support
 Comment[es]=Implementación del lenguaje del núcleo Shiva
 Comment[et]=Shiva kernelikeele toetus
 Comment[it]=Supporto per il linguaggio Shiva Kernel
+Comment[nds]=Shiva-Karn-Spraakünnerstütten
 Comment[nl]=Ondersteuning van Shiva-kerneltaal
 Comment[pt]=Suporte à Linguagem do 'Kernel' Shiva
 Comment[pt_BR]=Suporte à Linguagem do 'Kernel' Shiva
