--- a/kplato/libs/kernel/kplato_schedulerplugin.desktop
+++ b/kplato/libs/kernel/kplato_schedulerplugin.desktop
@@ -2,6 +2,7 @@
 Name=KPlato Scheduler Plugin
 Name[es]=Complemento de planificación de KPlato
 Name[et]=KPlato ajakavaplugin
+Name[nds]=KPlato-Plaanmoduul
 Name[nl]=KPlato planner-plugin
 Name[pt]='Plugin' de Calendarização do KPlato
 Name[pt_BR]=Plugin de Calendário do KPlato
@@ -13,6 +14,7 @@ X-KDE-ServiceType=KPlato/SchedulerPlugin
 Comment=A plugin that calculates a project schedule
 Comment[es]=Un complemento que calcula la planificación de un proyecto
 Comment[et]=Projekti ajakava arvutav plugin
+Comment[nds]=En Moduul, dat en Projektplaan utreekt
 Comment[nl]=Een plugin, die een projectplanning berekent
 Comment[pt]=Um 'plugin' que calcula o escalonamento de um projecto
 Comment[pt_BR]=Um plugin que calcula o agendamento de um projeto
