--- a/kplato/plugins/schedulers/rcps/kplatorcpsscheduler.desktop
+++ b/kplato/plugins/schedulers/rcps/kplatorcpsscheduler.desktop
@@ -6,6 +6,7 @@ X-KDE-Library=kplatorcpsscheduler
 Name=RCPS Scheduler
 Name[es]=Planificador RCPS
 Name[et]=RCPS ajakava
+Name[nds]=RCPS-Planer
 Name[nl]=RCPS-planner
 Name[pt]=Calendarização RCPS
 Name[pt_BR]=Calendarização RCPS
@@ -15,6 +16,7 @@ Name[zh_TW]=RCPS 排程器
 Comment=Genetics based Resource Conflict Project Scheduler
 Comment[es]=Planificador de proyectos con conflicto de recursos basado en algoritmos genéticos
 Comment[et]=Ressursipiirangutega projektide ajakava
+Comment[nds]=Ressourcenkonflikt-Projektplaner, op Genetik opbuut
 Comment[nl]=Op genetica gebaseerde projectplanner voor hulpbronconflicten
 Comment[pt]=Calendarização de Projectos com Conflitos de Recursos baseada em algoritmos genéticos
 Comment[pt_BR]=Calendarização de Projetos com Conflitos de Recursos baseada em algoritmos genéticos
