--- a/krita/plugins/colorspaces/ctlcs/krita_ctlcs_plugin.desktop
+++ b/krita/plugins/colorspaces/ctlcs/krita_ctlcs_plugin.desktop
@@ -1,10 +1,12 @@
 [Desktop Entry]
 Name=CTL Color Spaces
 Name[da]=CTL-farverum
+Name[de]=CTL-Farbraum
 Name[en_GB]=CTL Colour Spaces
 Name[es]=Espacios de color CTL
 Name[et]=CTL värviruumid
 Name[it]=Spazi di colore CTL
+Name[nds]=CTL-Köörrüüm
 Name[nl]=CTL-kleurruimten
 Name[pt]=Espaços de Cores CTL
 Name[pt_BR]=Espaços de Cores CTL
@@ -17,6 +19,7 @@ Comment[en_GB]=Colour model written using the Colour Transformation Language.
 Comment[es]=Modelo de color escrito usado el Lenguaje de Transformación de Colores.
 Comment[et]=CTL-is (Color Transformation Language) kirja pandud värvimudel
 Comment[it]=Modello di colore scritto nel linguaggio di trasformazione dei colori, o «Color Transformation Language».
+Comment[nds]=Klöörmodell, mit de Klöör-Ümformspraak (CTL) schreven
 Comment[nl]=Kleurmodel geschreven met gebruik van de kleurtransformatietaal
 Comment[pt]=Modelo de cores criado com a Linguagem de Transformações de Cores (CTL).
 Comment[pt_BR]=Modelo de cores criado com a Linguagem de Transformações de Cores (CTL).
