install more headers
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@974842 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/libs/flake/CMakeLists.txt
+++ b/libs/flake/CMakeLists.txt
@@ -185,6 +185,7 @@ install(
     KoCanvasResourceProvider.h
     KoDataCenter.h
     KoDrag.h
+    KoDragOdfSaveHelper.h
     KoFlake.h
     KoFrameShape.h
     KoImageCollection.h
@@ -196,11 +197,13 @@ install(
     KoSelection.h
     KoShape.h
     KoShapeContainer.h
+    KoShapeContainerModel.h
     KoShapeController.h
     KoShapeControllerBase.h
     KoShapeFactory.h
     KoShapeLayer.h
     KoShapeLoadingContext.h
+    KoShapeOdfSaveHelper.h
     KoLoadingShapeUpdater.h
     KoShapeConfigWidgetBase.h
     KoShapeManager.h
