initial work on an extensions manager
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@975802 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/extensions/CMakeLists.txt
+++ b/krita/plugins/extensions/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory( together )
 add_subdirectory( tonemapping )
 add_subdirectory( trianglecolorselector )
 add_subdirectory( histogram_docker )
+add_subdirectory( extensionsmanager )
 
 macro_optional_find_package(GMM)
 macro_log_feature(GMM_FOUND "Gmm++" "Generic C++ template library for sparse, dense and skyline matrices" "http://home.gna.org/getfem/download.html" FALSE "" "Required by the Krita panorama plugin")
