show the extensions manager
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@975810 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/extensions/extensionsmanager/CMakeLists.txt
+++ b/krita/plugins/extensions/extensionsmanager/CMakeLists.txt
@@ -1,5 +1,7 @@
 
-set(kritaextensionsmanager_PART_SRCS extensionsmanager.cc )
+set(kritaextensionsmanager_PART_SRCS
+    extensionsmanager.cc
+    ExtensionsManagerWindow.cpp )
 
 
 kde4_add_ui_files(kritaextensionsmanager_PART_SRCS
