rename a few files
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@975816 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/extensions/extensionsmanager/CMakeLists.txt
+++ b/krita/plugins/extensions/extensionsmanager/CMakeLists.txt
@@ -1,12 +1,12 @@
 
 set(kritaextensionsmanager_PART_SRCS
-    extensionsmanager.cc
+    ExtensionsManagerPlugin.cc
     ExtensionsManagerWindow.cpp )
 
 
 kde4_add_ui_files(kritaextensionsmanager_PART_SRCS
     ExtensionsManagerWidget.ui
-    PackageInformationWidget.ui )
+    ExtensionInformationWidget.ui )
 
 kde4_add_plugin(kritaextensionsmanager ${kritaextensionsmanager_PART_SRCS})
 
