start parsing the manifest.xml file
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@975883 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/extensions/extensionsmanager/CMakeLists.txt
+++ b/krita/plugins/extensions/extensionsmanager/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 set(kritaextensionsmanager_PART_SRCS
+    Extension.cpp
     ExtensionsManager.cpp
     ExtensionsManagerPlugin.cc
     ExtensionsManagerWindow.cpp )
