make context menu cut, copy and paste actions work
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@976205 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/krita.rc
+++ b/krita/krita.rc
@@ -198,9 +198,9 @@
  <Action name="edit_undo"/>
  <Action name="edit_redo"/>
  <Separator/>
- <Action name="cut"/>
- <Action name="copy"/>
- <Action name="paste"/>
+ <Action name="edit_cut"/>
+ <Action name="edit_copy"/>
+ <Action name="edit_paste"/>
  <Action name="paste_new"/>
  <Separator/>
  <ActionList name="flake_tool_actions"/>
