SVN_SILENT made messages (.desktop file)
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@976735 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/plugins/extensions/extensionsmanager/kritaextensionsmanager.desktop
+++ b/krita/plugins/extensions/extensionsmanager/kritaextensionsmanager.desktop
@@ -1,6 +1,12 @@
 [Desktop Entry]
 Name=ExtensionsManager
+Name[et]=Laienduste haldur
+Name[sv]=Utökningshantering
+Name[uk]=Керування додатками
 Comment=ExtensionsManager
+Comment[et]=Laienduste haldur
+Comment[sv]=Utökningshantering
+Comment[uk]=Керування додатками
 X-KDE-ServiceTypes=Krita/ViewPlugin
 Type=Service
 X-KDE-Library=kritaextensionsmanager
