--- a/libs/kotext/CMakeLists.txt
+++ b/libs/kotext/CMakeLists.txt
@@ -64,6 +64,7 @@ set(kotext_LIB_SRCS
 
     changetracker/KoChangeTracker.cpp
     changetracker/KoChangeTrackerElement.cpp
+    changetracker/KoDeleteChangeMarker.cpp
     KoTextDrag.cpp
 )
 
