add pasteAt method (needs to be fleshed out)
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@978143 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/krita/krita.rc
+++ b/krita/krita.rc
@@ -201,7 +201,7 @@
  <Action name="edit_cut"/>
  <Action name="edit_copy"/>
  <Action name="edit_paste"/>
- <Action name="paste_new"/>
+ <Action name="paste_at"/>
  <Separator/>
  <ActionList name="flake_tool_actions"/>
 </Menu>
