--- a/krita/krita.rc
+++ b/krita/krita.rc
@@ -108,6 +108,7 @@
   <DefineGroup name="layer_properties_merge" />
   <Separator/>
   <Action name="merge_layer"/>
+  <Action name="flatten_layer"/>
   <Action name="merge_all_shape_layers"/>
   <Action name="flatten_image"/>
 </Menu>
