--- a/karbon/CMakeLists.txt
+++ b/karbon/CMakeLists.txt
@@ -49,6 +49,12 @@ set(karbon_KDEINIT_SRCS main.cc )
 kde4_add_app_icon( karbon_KDEINIT_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/pics/hi*-app-karbon.png" )
 kde4_add_kdeinit_executable( karbon ${karbon_KDEINIT_SRCS})
 
+if (Q_WS_MAC)
+   set_target_properties(karbon PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.template)
+   set_target_properties(karbon PROPERTIES MACOSX_BUNDLE_GUI_IDENTIFIER "org.koffice.karbon")
+   set_target_properties(karbon PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME "Karbon 2")
+endif (Q_WS_MAC)
+
 target_link_libraries(kdeinit_karbon komain ${KDE4_KDECORE_LIBS} ${KDE4_KDEUI_LIBS} karboncommon karbonui )
 
 install(TARGETS kdeinit_karbon  ${INSTALL_TARGETS_DEFAULT_ARGS})
