--- a/krita/CMakeLists.txt
+++ b/krita/CMakeLists.txt
@@ -111,6 +111,12 @@ if (SHOULD_BUILD_KRITA)
 
     kde4_add_kdeinit_executable(krita ${krita_KDEINIT_SRCS})
 
+    if (Q_WS_MAC)
+       set_target_properties(krita PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist.template)
+       set_target_properties(krita PROPERTIES MACOSX_BUNDLE_GUI_IDENTIFIER "org.koffice.krita")
+       set_target_properties(krita PROPERTIES MACOSX_BUNDLE_BUNDLE_NAME "Krita 2")
+    endif (Q_WS_MAC)
+
     target_link_libraries(kdeinit_krita kritaui)
 
     install(TARGETS kdeinit_krita ${INSTALL_TARGETS_DEFAULT_ARGS})
