* Plugin : Conection Tool :  - connections have been involved you can now connect shape with shape, canvas with shape, shape with canvas.  - you can choose the point to make the connection  - connection points don't care of the shape rotation or scale ...
Still a lot of things to do.

* KPresenter :
Black Presentation
 - you can now black the presentation by clicking on the key B or using the icon (presentation mode only)

Still need to kill strategies when a presentation is ended.



git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@979100 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kpresenter/part/CMakeLists.txt
+++ b/kpresenter/part/CMakeLists.txt
@@ -47,8 +47,10 @@ set( kpresenterprivate_LIB_SRCS
      KPrPlaceholderTextStrategy.cpp
      KPrPresentationHighlightWidget.cpp
      KPrPresentationDrawWidget.cpp
+     KPrPresentationBlackWidget.cpp
      KPrPresentationStrategy.cpp
      KPrPresentationHighlightStrategy.cpp
+     KPrPresentationBlackStrategy.cpp
      KPrPresentationStrategyInterface.cpp
      KPrPresentationDrawStrategy.cpp
 
