o remove unneeded pigment plugins from kpresenter
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@979205 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kpresenter/part/CMakeLists.txt
+++ b/kpresenter/part/CMakeLists.txt
@@ -151,3 +151,5 @@ install( FILES kpresenter.desktop DESTINATION ${XDG_APPS_INSTALL_DIR})
 
 ### GUI files ###
 install( FILES kpresenter.rc kpresenter_readonly.rc DESTINATION ${DATA_INSTALL_DIR}/kpresenter)
+
+install( FILES kpresenterrc DESTINATION ${CONFIG_INSTALL_DIR} )
