SVN_SILENT made messages (.desktop file)
git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/koffice@979338 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kplato/libs/kernel/kplato_schedulerplugin.desktop
+++ b/kplato/libs/kernel/kplato_schedulerplugin.desktop
@@ -8,6 +8,7 @@ Name[pt]='Plugin' de Calendarização do KPlato
 Name[pt_BR]=Plugin de Calendário do KPlato
 Name[sv]=Kplato insticksprogram för schemaläggning
 Name[uk]=Додаток планування KPlato
+Name[x-test]=xxKPlato Scheduler Pluginxx
 Name[zh_TW]=KPlato 排程器外掛程式
 Type=ServiceType
 X-KDE-ServiceType=KPlato/SchedulerPlugin
@@ -20,4 +21,5 @@ Comment[pt]=Um 'plugin' que calcula o escalonamento de um projecto
 Comment[pt_BR]=Um plugin que calcula o agendamento de um projeto
 Comment[sv]=Ett insticksprogram som beräknar ett projektschema
 Comment[uk]=Додаток для обчислення розкладу проекту
+Comment[x-test]=xxA plugin that calculates a project schedulexx
 Comment[zh_TW]=計算專案排程的外掛程式
