--- a/kplato/plugins/schedulers/rcps/kplatorcpsscheduler.desktop
+++ b/kplato/plugins/schedulers/rcps/kplatorcpsscheduler.desktop
@@ -12,6 +12,7 @@ Name[pt]=Calendarização RCPS
 Name[pt_BR]=Calendarização RCPS
 Name[sv]=RCPS-schemaläggning
 Name[uk]=Засіб планування RCPS
+Name[x-test]=xxRCPS Schedulerxx
 Name[zh_TW]=RCPS 排程器
 Comment=Genetics based Resource Conflict Project Scheduler
 Comment[es]=Planificador de proyectos con conflicto de recursos basado en algoritmos genéticos
@@ -22,4 +23,5 @@ Comment[pt]=Calendarização de Projectos com Conflitos de Recursos baseada em a
 Comment[pt_BR]=Calendarização de Projetos com Conflitos de Recursos baseada em algoritmos genéticos
 Comment[sv]=Genetiskt baserad resurskonfliktschemaläggning av projekt
 Comment[uk]=Генетичний планувальник конфліктів виконавців проекту
+Comment[x-test]=xxGenetics based Resource Conflict Project Schedulerxx
 Comment[zh_TW]=基於 Genetics 的資源衝突專案排程器
