--- a/krita/plugins/extensions/extensionsmanager/kritaextensionsmanager.desktop
+++ b/krita/plugins/extensions/extensionsmanager/kritaextensionsmanager.desktop
@@ -2,16 +2,18 @@
 Name=ExtensionsManager
 Name[et]=Laienduste haldur
 Name[pt]=Gestor de Extensões
-Name[pt_BR]=Gestor de Extensões
+Name[pt_BR]=Gerenciador de Extensões
 Name[sv]=Utökningshantering
 Name[uk]=Керування додатками
+Name[x-test]=xxExtensionsManagerxx
 Name[zh_TW]=延伸管理員
 Comment=ExtensionsManager
 Comment[et]=Laienduste haldur
 Comment[pt]=Gestor de Extensões
-Comment[pt_BR]=Gestor de Extensões
+Comment[pt_BR]=Gerenciador de Extensões
 Comment[sv]=Utökningshantering
 Comment[uk]=Керування додатками
+Comment[x-test]=xxExtensionsManagerxx
 Comment[zh_TW]=延伸管理員
 X-KDE-ServiceTypes=Krita/ViewPlugin
 Type=Service
