--- a/krita/plugins/extensions/backgrounds/kritabackgrounds.desktop
+++ b/krita/plugins/extensions/backgrounds/kritabackgrounds.desktop
@@ -3,9 +3,10 @@ Name=Image Background Pattern Selector
 Name[et]=Pildi taustamustri valija
 Name[nds]=Bildachtergrund-Musterköör
 Name[pt]=Selector de Padrões de Fundo da Imagem
-Name[pt_BR]=Selector de Padrões de Fundo da Imagem
+Name[pt_BR]=Seletor de Padrões de Fundo da Imagem
 Name[sv]=Väljare av bakgrundsmönster för bilder
 Name[uk]=Інструмент вибору зображення візерунка тла
+Name[x-test]=xxImage Background Pattern Selectorxx
 Name[zh_TW]=背景圖片樣式選擇器
 X-KDE-ServiceTypes=Krita/ViewPlugin
 Type=Service
